# ulatencyd

./: .gitignore  AUTHORS  Adjusting-default-scheduler.md  Architecture.md  CMakeLists.txt  ChangeLog  Faq.rest  Home.md  How-does-it-work.md  NEWS  README  README.md  Start-hacking.md  TODO  Vagrantfile  Writing-Rules.md  config.h.cmake  config.h.tmpl  flags.md.md  ulatency  ulatencyd.conf
client/: README.md  ulatency  ulatency-gui
cmake/: InitialFlags.cmake
cmake/Modules/: FindLua52.cmake  FindProcps.cmake
conf/: cgroups.conf  org.quamquam.ulatencyd.conf  org.quamquam.ulatencyd.policy  simple.conf  ulatencyd.conf  ulatencyd.service
conf/scheduler/: 00-common.lua  00_common.lua  20-desktop.lua  20-one-seat-desktop.lua  20-single-user-desktop.lua  30-game.lua  30-single-task.lua  50-video_playback.lua  99-cleanup.lua  desktop.lua  game.lua  single_task.lua
conf/simple.d/: applications.conf  audio.conf  bittorrent.conf  cinnamon.conf  dbus.conf  debian.conf  fixes.conf  games.conf  gui-terminals.conf  idle.conf  isolate.conf  lxde.conf  media.conf  pantheon.conf  portage.conf  screencasters.conf  sessions.conf  ubuntu.conf  ui.conf  unity.conf  video.conf  xfce.conf
debian/: README.Debian  changelog  control  copyright  docs  files  rules  ulatencyd.default  ulatencyd.doc-base.EX  ulatencyd.init  ulatencyd.postinst.debhelper  ulatencyd.preinst.debhelper  ulatencyd.prerm.debhelper  ulatencyd.substvars  ulatencyd.upstart
docs/: CMakeLists.txt  RULES_HOWTO.txt  architecture.dia  debug.txt  doxygen.conf  doxygen.conf.tmpl  run-game.1  run-single-task.1  ulatency-gui.1  ulatency.1  ulatencyd.8
docs/UEP/: readme
docs/UEP/UFocus/: focus_tree.dia
docs/wiki/: Home.md  Ideas-to-test.md  Start-hacking.md
docs/wiki/specs/: dbus
modules/: CMakeLists.txt  consolekit.c  netlink_fallback.c  sessions_consolekit.c  sessions_logind.c  simplerules.c  test.c  test_module.c  xwatch.c
rules/: 00-fixers.lua  awesome.lua  desktop.lua  gnome.lua  io.lua  kde.lua  lxde.lua  media.lua  protectors.lua  scheduler.lua  scheduler_desktop.lua  sessions.lua  system.lua  test.lua  xdg_sessions.lua  xfce.lua  zz_fixers.lua  zz_isolate.ldox  zz_isolate.lua
scripts/: root_alleyoop.sh  update-user-apps.sh  update_externals.sh
scripts/cron.daily/: 99ulatencyd
scripts/logrotate/: ulatencyd.logrotate
scripts/lua2dox/: Lua.pm  lua2dox
scripts/service/systemd/: ulatencyd.service
scripts/service/sysv-rc/: ulatencyd.init
scripts/service/upstart/: ulatencyd-dbus.conf  ulatencyd.conf
src/: CMakeLists.txt  config.h.tmpl  core.c  core.lua  dbus.c  fts.c  group.c  linux_netlink.c  lua_binding.c  lua_cgroup.c  nls.h  polkit.c  sessions_consolekit.c  sessions_logind.c  sysctl.c  sysinfo.c  tools.c  uassert.c  uassert.h  ufocusstack.c  ufocusstack.h  uhook.c  uhook.h  ulatency.h  ulatency.lua  ulatencyd.c  ulatencyd_cleanup.lua  ulatencyd_cleanup.lua.tmpl  ulatencyd_cleanup.sh.tmpl  umodule.c  usession-agent.h  usession.c  usession.h
src/bc/: CMakeLists.txt  README  bconfig.h  lbc.c  lbc.h  number.c
src/coreutils/: readutmp.c  readutmp.h  xalloc-die.c
src/coreutils_delete/: readutmp.c
src/docs/doxygen/: U_PROC.ldox  U_SESSION.ldox  U_TASK.ldox  core.ldox  filters.ldox  flags.ldox  modules.ldox  overview.ldox  rules.ldox  scheduler.ldox  structs.dox  timeouts.ldox  u_flag.dox  u_proc.ldox  ulatency.ldox
src/lua/: bootstrap.lua  cgroup.lua  misc.lua  string.lua  table.lua  u_proc.lua  ulatency.lua
src/proc/: CMakeLists.txt  alloc.c  readproc.c  readproc.h  sysinfo.c  sysinfo.h  version.c  version.h
tests/: CMakeLists.txt  benchmark.lua  forkbomb.c  lunatest.lua  memleak.c  misc.lua  processes.lua  test.lua  test_xwatch.c  valgrind.supp
tests/benchmarks/: misc.lua
tests/conf/: ulatencyd.conf
